# ImitateTTS

./: .gitignore  CMakeLists.txt  README.md  config.h.in
include/: AudioStreaming.h  ImitateTTSService.h
res/: ca.l5.expandingdev.Buckey.TTS.xml  ca.l5.expandingdev.ImitateTTS.xml  imitate.conf  imitate.conf.in  prepared.txt
src/: ImitateTTSService.cpp  main.cpp
src/cmu/: mimic_voice_list.c
